--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,19 +18,22 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="/dashboard">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/search">Search</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/places/new">Add a review</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/dashboard">Dashboard</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/places">Places</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/menu_items">Menu Items</a>
+            <a class="nav-link active" aria-current="page" href="/menu_items">Orders</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/map">Map</a>
