--- a/app/views/menu_items/show.html.erb
+++ b/app/views/menu_items/show.html.erb
@@ -6,7 +6,7 @@
         <h2><%= @menu_item.name %></h2>
         <div class= "icons">
           <%= link_to edit_menu_item_path(@menu_item), class: "text-decoration-none text-dark" do %>
-            <i class="fa-regular fa-pen-to-square"></i>
+            <i class="fa-regular fa-pen-to-square mx-2"></i>
           <% end %>
           <%= link_to menu_item_path(@menu_item), class: "text-decoration-none text-dark",
           data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} do %>
