--- a/app/views/pages/_info_windows.html.erb
+++ b/app/views/pages/_info_windows.html.erb
@@ -1,2 +1,3 @@
-<h2><%= link_to place.name, place_path(place) %></h2>
-<p><%= place.address %></p>
+
+<h2><%= link_to place.name, place_path(place), class: "windows-text"%></h2>
+<p><i class="fa-sharp fa-solid fa-location-dot"></i> <%= place.address %></p>
