--- a/app/views/pages/_marker.html.erb
+++ b/app/views/pages/_marker.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag "icon.png", height: 30, width: 30, alt: "Logo" %>
-<div class="badge rounded-pill bg-primary fs-6">
+<%= image_tag "icon.png", height: 30, width: 30, alt: "Logo", class:"map-icon"%>
+<div class="badge map-badge fs-6">
   <%= place.name %>
 </div>
