--- a/app/views/pages/map.html.erb
+++ b/app/views/pages/map.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Check out your places on a map!</h2>
+  <h2>Check out your places on the map!</h2>
   <div style="width: 100%; height: 600px;"
     data-controller="map"
     data-map-markers-value="<%= @markers.to_json %>"
