--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,6 +39,9 @@
             <a class="nav-link active" aria-current="page" href="/map">Map</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Welcome Page</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link text-danger" href="/users/sign_out" data-turbo-method="delete" >Sign out</a>
           </li>
         </ul>
