--- a/app/views/menu_items/edit.html.erb
+++ b/app/views/menu_items/edit.html.erb
@@ -8,7 +8,10 @@
           <%= f.input :category, collection: %w[Bakery\ item Beverage Cake Dessert Main\ course Salad Sandwich/Wrap Side\ dish Snack Soup Starter Other] %>
           <%= f.input :price %>
           <%= f.input :visit_date %>
-          <%= f.input :rating %>
+          <p>Rating:</p>
+          <div class="rating-input">
+            <%= f.input :rating, collection: [1, 2, 3, 4, 5], as: :radio_buttons, lable: false %>
+          </div>
           <%= f.input :description %>
           <%= f.input :photo, as: :file %>
         </div>
