photo validation is fixed and tested

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,8 @@
       <%= render "shared/navbar" %>
     <% end %>
 
+    <%= render "shared/flashes" %>
+
     <p class="notice m-0"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
