--- a/app/views/menu_items/show.html.erb
+++ b/app/views/menu_items/show.html.erb
@@ -52,5 +52,17 @@
     <div class="card-end">
     </div>
   </div>
-
   <%# <a href="/dashboard" class="btn btn-ghost" role="button">Go to dashboard</a> %>
+
+ <!-- Display success message -->
+        <% if flash[:success] %>
+          <div class="alert alert-success">
+            <%= flash[:success] %>
+          </div>
+        <% end %>
+        <!-- Display error message -->
+        <% if flash[:error] %>
+          <div class="alert alert-danger">
+            <%= flash[:error] %>
+          </div>
+        <% end %>
