--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -2,7 +2,6 @@
   <div class="row justify-content-center">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4">
       <div class="form-login" data-controller="choose-place">
-
         <%= simple_form_for (@place) do |f| %>
         <h2>Where was the place?</h2>
         <h4>Choose a place:</h4>
@@ -15,11 +14,12 @@
           <%= f.input :category, collection: %w[Bakery Bar Buffet Cafe Food\ Truck Patisserie Restaurant Other] %>
           <%= f.input :cuisine, collection: %w[American Chinese German Greek Indian Italian Mexican Oriental Spanish Japanese Thai Turkish Vietnamese Other] %>
           <%= f.input :address %>
-        </div>
+           </div>
+
         <br>
 
         <h2>What did you have?</h2>
-        <%= f.simple_fields_for :menu_items do |ff| %>
+        <%= f.simple_fields_for :menu_items, @place.menu_items do |ff| %>
           <%= ff.input :name %>
           <%= ff.input :category, collection: %w[Bakery\ item Beverage Cake Dessert Main\ course Salad Sandwich/Wrap Side\ dish Snack Soup Starter Other] %>
           <%= ff.input :price %>
