--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="search">
+  <div class="search mb-4">
       <%= form_with url: search_path, method: :get, class: "d-flex" do %>
       <%= text_field_tag :query,
         params[:query],
