--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,11 +13,15 @@
     <% end %>
     <div class="home-footer fixed-bottom text-center">
       <a>Find us here: </i></a>
+      &nbsp
       <a href="#"><i class="fab fa-github text-light"></i></a>
+      &nbsp
       <a href="#"><i class="fab fa-instagram text-light"></i></a>
+      &nbsp
       <a href="#"><i class="fab fa-facebook text-light"></i></a>
-      contact@historant.de
-      Copyright <i class="fa-regular fa-copyright fs-6"></i> 2023 Historant
+      &nbspcontact@historant.de
+      <br>
+      &nbspCopyright <i class="fa-regular fa-copyright fs-6"></i> 2023 Historant
     </div>
   </div>
 </div>
