--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -4,7 +4,7 @@
       <%= text_field_tag :query,
         params[:query],
         class: "form-control me-3",
-        placeholder: "Search a keyword ..."
+        placeholder: "What are you looking for?"
       %>
       <%= submit_tag "Search", class: "btn-ghost" %>
     <% end %>
