--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -8,7 +8,7 @@
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 30px;
-    text-align: center;
+    text-align: left;
   }
   .btn {
     width: 100%;
