--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -7,8 +7,8 @@
         <%= f.input :name %>
         <%= f.input :cuisine, collection: %w[American Chinese German Greek Indian Italian Mexican Oriental Spanish Japanese Thai Turkish Vietnamese Other]%>
         <%= f.input :address %>
-        <%= f.submit "Update place", class: "btn btn-primary" %>
-        <%= link_to "Back", places_path(@places), class: "btn btn-secondary" %>
+        <%= f.submit "Update place", class: "btn btn-ghost mb-3" %>
+        <%= link_to "Back", places_path(@places), class: "btn btn-ghost-sec" %>
       <% end %>
     </div>
   </div>
