--- a/app/views/menu_items/edit.html.erb
+++ b/app/views/menu_items/edit.html.erb
@@ -1,26 +1,23 @@
 <div class="container">
-  <div class="row justify-content-center">
-    <div class="form col-xs-12 col-sm-4 col-sm-offset-4">
-      <h2>Edit your review</h2>
-      <%= simple_form_for([@place, @menu_item]) do |f| %>
-        <div class="form-inputs">
-          <%= f.input :name %>
-          <%= f.input :category, collection: %w[Bakery\ item Beverage Cake Dessert Main\ course Salad Sandwich/Wrap Side\ dish Snack Soup Starter Other] %>
-          <%= f.input :price %>
-          <%= f.input :visit_date %>
-          <p>Rating:</p>
-          <div class="rating-input">
-            <%= f.input :rating, collection: [1, 2, 3, 4, 5], as: :radio_buttons, lable: false %>
-          </div>
-          <%= f.input :description %>
-          <%= f.input :photo, as: :file %>
+  <div class="form">
+    <h2>Edit your review</h2>
+    <%= simple_form_for([@place, @menu_item]) do |f| %>
+      <div class="form-inputs">
+        <%= f.input :name %>
+        <%= f.input :category, collection: %w[Bakery\ item Beverage Cake Dessert Main\ course Salad Sandwich/Wrap Side\ dish Snack Soup Starter Other] %>
+        <%= f.input :price %>
+        <%= f.input :visit_date %>
+        <p>Rating:</p>
+        <div class="rating-input">
+          <%= f.input :rating, collection: [1, 2, 3, 4, 5], as: :radio_buttons, lable: false %>
         </div>
-        <div class="form-actions">
-          <%= f.button :submit, "Update", class: "btn btn-ghost mb-3" %>
-          <%= link_to "Back", menu_items_path(@menu_items), class: "btn btn-ghost-sec" %>
-
-        </div>
-      <% end %>
-    </div>
+        <%= f.input :description %>
+        <%= f.input :photo, as: :file %>
+      </div>
+      <div class="form-actions">
+        <%= f.button :submit, "Update", class: "btn btn-ghost mb-3" %>
+        <%= link_to "Back", menu_items_path(@menu_items), class: "btn btn-ghost-sec" %>
+      </div>
+    <% end %>
   </div>
 </div>
