--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -6,7 +6,7 @@
         class: "form-control me-3",
         placeholder: "What are you looking for?"
       %>
-      <%= submit_tag "Search", class: "btn-ghost" %>
+      <%= submit_tag "Search", class: "btn-ghost btn-search" %>
     <% end %>
 
     <% if flash.now[:notice].present? %>
