margins and text strong

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 style = "text-start top"> <%= @greeting %> <%= current_user.first_name %>!</h2>
+  <h2 style = "text-start top"> <strong><%= @greeting %> <%= current_user.first_name %>!</strong></h2>
 
   <!-- Places Carousel -->
   <div class="row top">
