--- a/app/views/pages/map.html.erb
+++ b/app/views/pages/map.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <h2>Check out your places on the map!</h2>
-  <div style="width: 100%; height: 600px;"
+  <h2><strong>Check out your places!<strong></h2>
+  <div style="width: 100%; height: 600px; margin-top: 1.5rem;"
     data-controller="map"
     data-map-markers-value="<%= @markers.to_json %>"
     data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
