--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,10 +18,8 @@
       &nbsp
       <a href="#"><i class="fab fa-instagram text-light"></i></a>
       &nbsp
-      <a href="#"><i class="fab fa-facebook text-light"></i></a>
+      <a href="#"><i class="fab fa-facebook text-light my-2"></i></a>
       &nbspcontact@historant.de
-      <br>
-      &nbspCopyright <i class="fa-regular fa-copyright fs-6"></i> 2023 Historant
     </div>
   </div>
 </div>
