--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,8 @@
       <a href="#"><i class="fab fa-instagram text-light"></i></a>
       &nbsp
       <a href="#"><i class="fab fa-facebook text-light my-2"></i></a>
-      &nbspcontact@historant.de
+      &nbsp
+      contact@historant.de
     </div>
   </div>
 </div>
