--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -29,7 +29,7 @@
             <br>
 
             <h2>How did you find it?</h2>
-            <p>rating:</p>
+            <p>Rating</p>
               <div class="rating-input">
               <%= ff.input :rating, collection: [1, 2, 3, 4, 5], as: :radio_buttons, lable: false %>
               </div>
