--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -1,8 +1,14 @@
-<div class="container">
+<div class="container px-4">
   <div class="row row-cols-1 row-cols-md-3 g-4 index-page">
   <h2>Your orders</h2>
-    <% @menu_items.each do |menu_item| %>
-      <%= render "menu_items/menu_item_card", menu_item: menu_item %>
+    <% if @menu_items.present? %>
+      <% @menu_items.each do |menu_item| %>
+        <%= render "menu_items/menu_item_card", menu_item: menu_item %>
+      <% end %>
+    <% else %>
+      <div class="p-4 text-center card-category bg-dark">
+        <p>No orders yet!</p>
+      </div>
     <% end %>
   </div>
 </div>
