--- a/app/views/places/_place_card.html.erb
+++ b/app/views/places/_place_card.html.erb
@@ -5,7 +5,7 @@
     </div>
 
   <% else %>
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+    <div class="card-category" style="background-color: $dark">
       <%= place.name %>
     </div>
   <% end %>
