made background for places and orders without pic

--- a/app/views/menu_items/show.html.erb
+++ b/app/views/menu_items/show.html.erb
@@ -3,7 +3,7 @@
     <% if @menu_item.photo.present? %>
       <%= cl_image_tag @menu_item.photo.key%>
     <% else %>
-    <img src="https://res.cloudinary.com/dwrkiuiqa/image/upload/v1679675575/A_black_image.jpg_cqmwqb.webp">
+    <img src="https://res.cloudinary.com/dwrkiuiqa/image/upload/v1680507373/empty-logobg_tjlvi4.jpg">
     <% end %>
     <div class="card-showpage-infos">
       <div class= "d-flex justify-content-between">
