--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -23,7 +23,7 @@
         <% end %>
       <% end %>
     <% else %>
-      <div class="p-4 text-center card-category bg-dark">
+      <div class="p-4 text-center card-category" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(https://res.cloudinary.com/dwrkiuiqa/image/upload/v1680507373/empty-logobg_tjlvi4.jpg)">
         <p>No places yet!</p>
       </div>
     <% end %>
@@ -76,7 +76,7 @@
         <% end %>
       <% end %>
     <% else %>
-      <div class="p-4 text-center card-category bg-dark">
+      <div class="p-4 text-center card-category" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(https://res.cloudinary.com/dwrkiuiqa/image/upload/v1680507373/empty-logobg_tjlvi4.jpg)">
         <p>No orders yet!</p>
       </div>
     <% end %>
