--- a/app/views/places/_place_card.html.erb
+++ b/app/views/places/_place_card.html.erb
@@ -5,7 +5,7 @@
     </div>
 
   <% else %>
-    <div class="card-category" style="background-color: $dark">
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(https://res.cloudinary.com/dwrkiuiqa/image/upload/v1680507373/empty-logobg_tjlvi4.jpg)">
       <%= place.name %>
     </div>
   <% end %>
