--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -35,7 +35,7 @@
               </div>
 
               <%= ff.input :description %>
-              <%= ff.input :photo, as: :file, required: true %>
+              <%= ff.input :photo, as: :file %>
           <% end %>
 
           <%= f.submit "Create", class: "btn btn-ghost" %>
