--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,7 +6,7 @@
         <%= render "places/place_card", place: place %>
       <% end %>
     <% else %>
-      <div class="p-4 text-center card-category bg-dark">
+      <div class="p-4 text-center card-category" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(https://res.cloudinary.com/dwrkiuiqa/image/upload/v1680507373/empty-logobg_tjlvi4.jpg)">
         <p>No places yet!</p>
       </div>
     <% end %>
